[package]
name = "nonempty"
version = "0.8.1"
description = "Correct by construction non-empty vector"
authors = ["Alexis Sellier <self@cloudhead.io>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/cloudhead/nonempty"

[dependencies]
serde = { features = ["serde_derive"], optional = true, version = "1" }
proptest = { version = "1.1.0", optional = true }
proptest-derive = {version = "0.3.0", optional = true }

[features]
serialize = ["serde"]
arbitrary = ["dep:proptest", "dep:proptest-derive"]

[dev-dependencies]
serde_json = "1"
